# k8sResourceResizer

./: .dockerignore  .editorconfig  .envrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-and-push.yml  docs.yml  resource-analyzer.yml
docker/: Dockerfile  README.md  entrypoint.sh  install.sh
docs/: github.md
scripts/: delete.sh
src/: argocd_client.py  logger.py  main.py  manifest_finder.py  manifest_updater.py  parser.py  pr_opener.py  prompt_creator.py  resource_optimizer.py  severity.py  utils.py
src/strategy/: __init__.py  adaptive_strategy.py  base_strategy.py  basic_strategy.py  ensemble_strategy.py  moving_average_strategy.py  pmdarima_strategy.py  prophet_strategy.py  quantile_regression_strategy.py  strategy_factory.py  time_aware_strategy.py  trend_aware_strategy.py  types.py  workload_aware_strategy.py
tests/integration/helm/hello-world/environments/: production.yaml  staging.yaml
tests/integration/kustomize/hello-world/overlay/production/: memory_limit.yaml
tests/integration/kustomize/hello-world/overlay/staging/: memory_limit.yaml
tests/unit/: test_pr_opener.py
