[project]
name = "K8sResourceResizer"
version = "0.2.0"
description = "A tool to manage k8s pod resources"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
dependencies = [
    "click>=8.3.1",
    "gitpython>=3.1.47",
    "loguru>=0.7.3",
    "numpy>=2.4.3",
    "pandas>=3.0.1",
    "pmdarima>=2.1.1",
    "prometrix>=0.2.11",
    "prophet>=1.3.0",
    "pygithub>=2.8.1",
    "python-dotenv>=1.2.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
]

[project.scripts]
# Expose CLI entrypoint 'k8s-limits' that invokes the main() function
# Module path uses the package name under src/ which in this repository
# is installed as the top-level package `src` (see src/__init__.py).
k8s-limits = "src.main:main"

[tool.setuptools]
packages = ["src"]
package-dir = { "src" = "src" }

[build-system]
requires = ["setuptools>=61", "wheel", "cython>=0.29.21,<3.0", "numpy>=1.21.2"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "commitizen>=4.13.9",
    "prek>=0.3.5",
    "ruff>=0.15.6",
    "isort>=5.12.0",
    "pytest>=9.0.2",
    "pytest-cov>=4.0.0",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.5",
    "mkdocs-material-extensions>=1.3.1",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-q --strict-markers --cov=src --cov-report=term-missing"
testpaths = ["tests"]
python_files = "test_*.py"


[tool.coverage.run]
branch = true
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 1 # TODO: Set to 85 when we want to enforce 85% coverage
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v{version}"
version = "0.2.0"
update_changelog_on_bump = true
